Added swagger docs, and added route to routes.ts
